<resources>
    <string name="app_name_p24">Privat24</string>
    <string name="error_inet_missing">Отсутствует интернет!</string>
    <string name="error_connection_missing">Ошибка связи с сервером</string>
    <string name="phone_number">Номер телефона</string>
    <string name="amount1">Cумма</string>
    <string name="from_card">С карты</string>
    <string name="common_pass">Пароль:</string>
    <string name="phone_operator">Оператор</string>
    <string name="phone_operator_chat">Оператор</string>
    <string name="summ_of_refill">Сумма к зачислению на телефон</string>
    <string name="payment_of_phone">Оплата за мобильную связь</string>
    <string name="credit_rating">Кредитный рейтинг</string>
    <string name="credit_rating_ubki">Кредитный рейтинг УБКИ</string>
    <string name="credit_history">Кредитная история</string>
    <string name="status_control">СтатусКонтроль</string>
    <string name="connect">Подключить</string>
    <string name="deactivate">Отключить</string>
    <string name="minimum">Минимальный</string>
    <string name="maximum">Максимальный</string>
    <string name="take_card">На всякий случай возьмите пластик с собой. К сожалению, не все магазины оборудованы устройствами, позволяющими считать штрих-код с телефона.</string>
    <string name="fill_field">Заполните поле \'</string>
    <string name="validator_incorrect_phone">Номер телефона введен некорректно!</string>
    <string name="amount_should_be_less_than">Введенная сумма должна быть не больше</string>
    <string name="input_must_be_greater_than_sum">Введенная сумма должна быть больше</string>
    <string name="validator_acc_incorrect">Номер счета введен некорректно!</string>
    <string name="validator_incorrect_card">Номер карты введен некорректно!</string>
    <string name="incorrect_field_value">Неправильное значение поля</string>
    <string name="no_card_in_the_required_currency">Нет карты в необходимой валюте!</string>
    <string name="the_minimum_value_in_the_field">Минимальное значение в поле \'</string>
    <string name="the_maximum_value_in_the_field">Максимальное значение в поле \'</string>
    <string name="amount_must_be_equal">Сумма должна быть равна</string>
    <string name="in_field">в поле</string>
    <string name="field_incorrect">Некорректный ввод поля</string>
    <string name="fill_field_">Заполните поле \'</string>
    <string name="to_field">В поле \'</string>
    <string name="not_selected_card_">\' не выбрана карта!</string>
    <string name="you_can_not_give_the_same_card">Вы не можете указывать одну и ту же карту!</string>
    <string name="email_is_invalid">E-mail введен некорректно!</string>
    <string name="you_must_agree_to_the_terms_and_rules">Вы должны согласиться с Условиями и правилами предоставления
        банковских услуг!</string>
    <string name="game_login">Логин в игре</string>
    <string name="code1">Внутренняя ошибка сервера</string>
    <string name="code2">Не привязан телефон</string>
    <string name="code3">Вы не являетесь клиентом ПАО \"Приватбанк\". Обратитесь в любое отделение.</string>
    <string name="code4">Операция недоступна</string>
    <string name="code5">Сервис отправки смс недоступен.</string>
    <string name="code6">Неверный код смс!</string>
    <string name="code7">Неверный номер карты</string>
    <string name="code8">Пароль введен неверно. Возможно, Ваш аккаунт заблокирован, пожалуйста, обратитесь в службу
        поддержки
    </string>
    <string name="code9">Ошибка при расчёте комиссии</string>
    <string name="code10">Данный логин уже зарегистрирован</string>
    <string name="code11">Ошибка пополнения счёта Liqpay</string>
    <string name="code12">Ошибка отправки инвойса</string>
    <string name="code13">Ошибка получения стран WU</string>
    <string name="code14">Ошибка получения информации по стране WU</string>
    <string name="code15">Ошибка получения валют, доступных для страны WU</string>
    <string name="code16">Ошибка получения регионов, доступных для выбора в WU</string>
    <string name="code17">Ошибка обмена данными с сервером ВКонтакте</string>
    <string name="code18">Ошибка получения курсов валют П24</string>
    <string name="code19">Неверный интервал при запросе точек для карты отделений и банкоматов</string>
    <string name="code20">Ошибка в реквизитах получателя!</string>
    <string name="code22">Ошибка получения списка кредитов</string>
    <string name="code23">Ошибка получения списка депозитов</string>
    <string name="code24">Ошибка открытия депозита</string>
    <string name="code25">Ошибка загрузки даннных по задолженностям из ГИВЦ</string>
    <string name="code26">Ошибка создания платежа ГИВЦ</string>
    <string name="code27">Ошибка взаимодействия с сервером PrivatMoney</string>
    <string name="code28">Ошибка взаимодействия с сервером билетов</string>
    <string name="code29">Ошибка поиска перевода WU</string>
    <string name="code30">Ошибка отправки перевода в WU</string>
    <string name="code31">Ошибка получения счетов юрлиц</string>
    <string name="code32">Ошибка получения остатков по счетам юрлиц</string>
    <string name="code33">Ошибка получения выписок по счетам юрлиц</string>
    <string name="code34">Неправильный ключ приложения</string>
    <string name="code35">Неверные данные для покупки бензина</string>
    <string name="code36">Ошибка при взаимодействии с АЗС</string>
    <string name="code37">Ошибка при блокировке средств на карте</string>
    <string name="code38">Выписки по привязанным картам недоступны</string>
    <string name="code39">Ошибка закрепления карты - данная карта уже присутствует в аккаунте</string>
    <string name="code40">Функционал не реализован</string>
    <string name="code41">Ошибка пополнения лицевого счёта во внешней системе</string>
    <string name="code42">Ошибка проверки пароля</string>
    <string name="code43">Неверный способ подтверждения платежа</string>
    <string name="code44">Ошибка проведения платежа</string>
    <string name="code45">Превышен лимит на сумму платежа</string>
    <string name="code46">Превышен дневной лимит на число операций</string>
    <string name="code47">Превышен месячный лимит на число операций</string>
    <string name="code48">Превышен дневной лимит на общую сумму операций</string>
    <string name="code49">Превышен месячный лимит на общую сумму операций</string>
    <string name="code50">Нарушен лимит на сумму одной операции</string>
    <string name="code51">Ошибка получения перевода WU</string>
    <string name="code52">Данный тип платежа не доступен</string>
    <string name="code53">Ошибка добавления заявки в админ панель</string>
    <string name="code54">Ошибка оплаты ж/д билетов</string>
    <string name="code55">Ошибка бронирования ж/д билетов</string>
    <string name="code56">Ошибка получения списка вагонов</string>
    <string name="code57">Ошибка получения списка свободных мест</string>
    <string name="code58">Ошибка получения списка маршрутов</string>
    <string name="code59">Ошибка получения перечня станций</string>
    <string name="code60">Ошибка получения архива ж/д билетов</string>
    <string name="code61">Неоходимо указать контрольный вопрос</string>
    <string name="code62">Указан неверный аккаунт Вконтакте</string>
    <string name="code63">Ошибка авторизации на совещание</string>
    <string name="code67">Ваши данные не совпадают с данными, указанными отправителем!</string>
    <string name="code68">Ошибка создания шаблона</string>
    <string name="code69">По одной из карт истек срок действия.</string>
    <string name="code70">Транзакция имеет недопустимые атрибуты или не разрешена на данном терминале.</string>
    <string name="code71">Карта имеет статус \"потеряна\" или \"украдена\"</string>
    <string name="code72">Неверный номер карты.</string>
    <string name="code73">Уважаемый клиент! Ваша карта имеет ограниченные возможности.</string>
    <string name="code74">Невозможно авторизировать карту.\nПроверьте корректность данных карты.</string>
    <string name="code75">Недостаточно средств на карте для проведения платежа.</string>
    <string name="code76">Превышение лимита по сумме платежа.</string>
    <string name="code77">Неправильный счет клиента</string>
    <string name="code78">Введенная сумма некорректна</string>
    <string name="code79">Неверное значение CVV2.</string>
    <string name="code80">Неверный формат запроса.</string>
    <string name="code81">Общая ошибка проведения платежа</string>
    <string name="code82">По одной из карт истек срок действия.</string>
    <string name="code83">Уважаемый клиент! Ваша карта заблокирована для оплаты.</string>
    <string name="code84">Превышен лимит попыток по карте.</string>
    <string name="code85">Общая ошибка проведения платежа.</string>
    <string name="code87">Уважаемый клиент! Вам необходимо пройти процесс подтверждения Вашего телефонного номера.
        Обратитесь в отделение, либо подтвердите свой номер в банкомате. После подтверждения необходимо будет перезайти
        в приложение через кнопку \"выход\"
    </string>
    <string name="code88">Уважаемый клиент! Вам необходимо пройти процесс подтверждения Вашего телефонного номера.
        Обратитесь в отделение, либо подтвердите свой номер в банкомате. После подтверждения необходимо будет перезайти
        в приложение через кнопку \"выход\"
    </string>
    <string name="code89">Невозможно распознать отсканированный QR код</string>
    <string name="code90">У Вас нет переводов Western Union!</string>
    <string name="code92">Операция временно недоступна.</string>
    <string name="code91">Перевод на карту этой страны не возможен. Перевод возможно совершить на карты MasterCard,
        выпущенных в следующих странах: Азербайджан, Албания, Армения, Болгария, Босния и Герцеговина, Венгрия, Грузия,
        Израиль, Казахстан, Кипр, Косово, Македония, Мальта, Молдова, Польша, Россия, Румыния, Сербия, Словакия,
        Словения, Турция, Украина, Хорватия, Черногория, Чехия.
    </string>
    <string name="code93">Не удалось подписаться на рассылку уведомлений.</string>
    <string name="code94">Ошибка выставления счета.</string>
    <string name="check_order">Посмотреть заказ</string>
    <string name="street">Улица</string>
    <string name="flat">Квартира</string>
    <string name="description_info">Описание</string>
    <string name="amount_of">на сумму</string>
    <string name="sum">Сумма</string>
    <string name="biplan_ccy">грн.</string>
    <string name="default_description">Карта для выплат *4251</string>
    <string name="pass">Пароль</string>
    <string name="cvv">Cvv карты</string>
    <string name="button_confirm">Подтвердить</string>
    <string name="button_details">Подробнее</string>
    <string name="edit_recipient_fio">Введите ФИО получателя</string>
    <string name="show_password">Показать пароль</string>
    <string name="city">Город</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="checkout_">Оплатить</string>
    <string name="all_ukraine">Вся Украина</string>
    <string name="kiev">Киев</string>
    <string name="new_post">Отделение Новой почты №</string>
    <string name="email">E-mail</string>
    <string name="taxi_house">Дом</string>
    <string name="are_you_eighteen">Мне 18 и более лет</string>
    <string name="delivery_costs">Стоимость доставки по Киеву составляет 30 грн. Заказ на сумму больше 600 грн - доставка бесплатная.</string>
    <string name="further">Далее</string>
    <string name="crim_record">Судимость</string>
    <string name="enter_series_pass">Введите серию и номер паспорта</string>
    <string name="residence_address">Адрес проживания</string>
    <string name="your_email">Введите Ваш e-mail</string>
    <string name="address_registr">Адрес прописки</string>
    <string name="middle_name">Отчество</string>
    <string name="your_adress_resid">Адрес проживания совпадает с адресом прописки</string>
</resources>