<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ua.privatbank.ap24.beta.views.RobotoRegularTextView
                android:id="@+id/tvPortin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 порций"
                android:textSize="16sp" />

            <ua.privatbank.ap24.beta.views.RobotoItalicTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:text="@string/amount_of" />

            <TextView
                android:id="@+id/summVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="32"
                android:textColor="?attr/color3"
                android:textSize="44dp" />

            <TextView
                android:id="@+id/tvCcy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:text="@string/biplan_ccy"
                android:textColor="?attr/color3" />
        </LinearLayout>

        <ua.privatbank.ap24.beta.apcore.components.ButtonNextView xmlns:p24="http://schemas.android.com/apk/res/ua.privatbank.ap24"
            android:id="@+id/btnShowOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            p24:iv_background="?attr/selector_button_next_small"
            p24:text="@string/check_order"
            p24:textSize="@dimen/text_size_more_transfers" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ua.privatbank.ap24.beta.views.RobotoLightItalicEditText
                android:id="@+id/etName"
                style="?attr/style_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:singleLine="true"
                android:textColor="?attr/common_text" />

        </LinearLayout>


        <ua.privatbank.ap24.beta.views.RobotoLightItalicEditText
            android:id="@+id/etPhone"
            style="?attr/style_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="?attr/common_text" />


        <ua.privatbank.ap24.beta.views.RobotoLightItalicEditText
            android:id="@+id/etEmail"
            style="?attr/style_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:singleLine="true"
            android:textColor="?attr/common_text"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/cardFromSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnKiev"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="-2dp"
                android:layout_weight="1"
                android:background="@drawable/left_bt_active"
                android:text="@string/kiev"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnAllCountry"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="-2dp"
                android:layout_weight="1"
                android:background="@drawable/right_bt_inactive"
                android:text="@string/all_ukraine"
                android:textColor="?attr/color6"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAllCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ua.privatbank.ap24.beta.views.RobotoLightItalicEditText
                android:id="@+id/etCity"
                style="?attr/style_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:singleLine="true"
                android:textColor="?attr/common_text" />

            <ua.privatbank.ap24.beta.views.RobotoLightItalicEditText
                android:id="@+id/etNewPost"
                style="?attr/style_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/new_post"
                android:singleLine="true"
                android:textColor="?attr/common_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ua.privatbank.ap24.beta.views.RobotoLightItalicEditText
                android:id="@+id/etStreetDelivery"
                style="?attr/style_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/street"
                android:singleLine="true"
                android:textColor="?attr/common_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ua.privatbank.ap24.beta.views.RobotoLightItalicEditText
                    android:id="@+id/etHouseDelivery"
                    style="?attr/style_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:hint="@string/taxi_house"
                    android:singleLine="true"
                    android:textColor="?attr/common_text" />

                <ua.privatbank.ap24.beta.views.RobotoLightItalicEditText
                    android:id="@+id/etFlatDelivery"
                    style="?attr/style_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:hint="@string/flat"
                    android:singleLine="true"
                    android:textColor="?attr/common_text" />

            </LinearLayout>

        </LinearLayout>

        <ua.privatbank.ap24.beta.views.RobotoRegularTextView
            android:id="@+id/tvDeliveryCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/delivery_costs"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cbConfirmEighteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:button="?attr/check_style"
            android:padding="5dp"
            android:text="@string/are_you_eighteen"
            android:textColor="?attr/common_text" />

        <ua.privatbank.ap24.beta.apcore.components.ButtonNextView xmlns:p24="http://schemas.android.com/apk/res/ua.privatbank.ap24"
            android:id="@+id/buttonPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="25dp"
            p24:text="@string/checkout_"
            p24:textSize="@dimen/text_size_button_next" />

    </LinearLayout>
</ScrollView>