<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/pass"
            style="?attr/style_edittext"
            android:inputType="textPassword"
    />

    <CheckBox
            android:id="@+id/checkPass"
            android:button="?attr/check_style"
            android:paddingLeft="@dimen/padding_checkbox"
            android:textColor="?attr/common_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:layout_marginTop="10dp"/>

    <ua.privatbank.ap24.beta.apcore.components.ButtonNextView
            xmlns:p24="http://schemas.android.com/apk/res/ua.privatbank.ap24"
            android:id="@+id/btnCSSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:layout_gravity="right"
            p24:textSize="@dimen/text_size_button_next"
            p24:text="@string/button_confirm"/>
</LinearLayout>